2009-07-23  Marcus Meissner  <marcus@jet.franken.de>

	* shell.c,action.c,main.c:
	  --capture-tethered ported to be just --wait-event + downloading

	  Added 2 new shell commands:
	  wait-event		(just like wait-event with 1 instance)
	  capture-tethered	(just like capture-tethered but just for 1 image)

2009-06-21  Marcus Meissner  <marcus@jet.franken.de>

	* main.c,action.c,shell.c: 
	  Added seperate --set-config-index and --set-config-value functions
	  for menu choice settings.

	* main.c: Save files with current umask, not 0600.
	* configure.ac: Build with large file support to allow saving files > 2GB.

2009-04-10  Marcus Meissner  <marcus@jet.franken.de>

	* main.c: --wait-event=x now can wait for "x" events,
	  or 1 second timeouts. (so longest wait time will be "x" seconds).

2009-04-07  Marcus Meissner  <marcus@jet.franken.de>

	* actions.c: ctrl-c can abort tethered capture now
	* main.c, gp-params.c: Make --quiet disable the progress bar too,
	  and reduce --stdout --quiet capture output.

2008-08-28  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/main.c: Allow to specify a camera by port.

	  For instance:
		gphoto2 --port usb:005,003 --capture-image


2008-05-24  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/{main.c,main.h,shell.c}:

	  --capture-image split into:

		--capture-image: just capture the image
		--capture-image-and-download:
			capture the image and download it.

2007-07-21  Marcus Meissner  <marcus@jet.franken.de>

	* implemented --capture-tethered 

2007-01-19  Marcus Meissner  <marcus@jet.franken.de>

	From Victor Wagner <vbwagner@users.sourceforge.net>
	* gphoto2/main.c: read hook script and
	  filename from settings file.

2006-11-25  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: version post 2.3.0 because 2.3.0 has
	been branched.

2006-03-23  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/{main,action}.{ch}: Added
	  "--wait-event" functionality to exercise/test new